--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-
-SITE_NAME_HEADER=Digital Garden
+THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=Dennis'digital Garden
 SITE_BASE_URL=gleeful-youtiao-f7a3e3.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -11,7 +12,7 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
