--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Dennis'digital garden
-SITE_BASE_URL=gleeful-youtiao-f7a3e3.netlify.app
+SITE_BASE_URL=dennis.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
