--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
-BASE_THEME=dark
-SITE_NAME_HEADER=Dennis'digital garden
+
+SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=denniswang.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -12,12 +11,12 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
-dgPassFrontmatter=true
-dgShowBacklinks=true
-dgShowLocalGraph=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
 dgShowInlineTitle=false
-dgShowFileTree=true
-dgEnableSearch=true
-dgShowToc=true
-dgLinkPreview=true
-dgShowTags=true
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=false
