--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
-BASE_THEME=dark
+BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=denniswang.netlify.app
 SHOW_CREATED_TIMESTAMP=false
